# go-fish-diferenciado

./: .gitignore  export_presets.cfg  icon.svg.import  project.godot
common/: game_constants.gd  game_constants.gd.uid  game_state.gd  game_state.gd.uid
common/fonts/: MotivateRegular-lx4PV.otf.import  PoLigon-Yqxvv.otf.import  game_font.tres
common/network/: network_manager.gd  network_manager.gd.uid  network_message_builder.gd  network_message_builder.gd.uid  network_message_parser.gd  network_message_parser.gd.uid
entities/cards/: card.gd  card.gd.uid  card.tscn  card_data.gd  card_data.gd.uid
entities/cards/art/: Pixel_Playing_Card_Set_updated.svg.import  card.gdshader
entities/cards/deck_manager/: deck_manager.gd  deck_manager.gd.uid  deck_manager.tscn
entities/cards/selection/: render_selection_component.gd  render_selection_component.gd.uid  selection.gd  selection.tscn  selection_manager.gd  selection_manager.gd.uid  selection_manager.tscn  selection_sprite_handler.gd  selection_sprite_handler.gd.uid
entities/opponent/: oponnent_manager.tscn  opponent_manager.gd  opponent_manager.gd.uid
entities/opponent/opponent_hand/: opponent_hand_area.gd  opponent_hand_area.gd.uid  opponent_hand_component.gd  (+2 more)
entities/player/: player_manager.gd  player_manager.gd.uid  player_manager.tscn
server/: pyproject.toml
server/src/: main.py
ui/board/: board_bg.gdshader  board_bg.gdshader.uid  board_manager.gd  board_manager.gd.uid  board_manager.tscn
ui/lobby/: lobby.gd  lobby.gd.uid  lobby.tscn
ui/login/: login.gd  login.gd.uid  login.tscn
(+28 files in other folders)
